--- a/image.html
+++ b/image.html
@@ -5,11 +5,13 @@
         <link rel="stylesheet" href="Project0.css">
     </head>
     <body>
-        <form action="https://www.google.com/search">
-            <input type="text" name="q">
-            <input type="hidden" name="tbm" value="isch">
-            <input type="submit" value="Google Search">
-        </form>
+        <div class="searchcontainer">
+            <form class="searchbar" action="https://www.google.com/search">
+                <input class="textfield" type="text" name="q">
+                <input type="hidden" name="tbm" value="isch"><br>
+                <input class="searchbutton" type="submit" value="Google Search">
+            </form>
+        </div>
 
         <div class="links">
             <a href="index.html">Google Search</a>
