--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
         <link rel="stylesheet" href="Project0.css">
     </head>
     <body>
-        <form action="https://www.google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
-        </form>
-
-        <div class="links">
-            <a href="image.html">Image Search</a>
-            <a href="advanced.html">Advanced Search</a>
+        <div class="searchcontainer">
+            <form class="searchbar" action="https://www.google.com/search">
+                <input class="textfield" type="text" name="q"><br>
+                <input class="searchbutton" type="submit" value="Google Search">
+                <input class="searchbutton" type="submit" value="I'm Feeling Lucky">
+            </form>
         </div>
+    
+    <div class="links">
+        <a href="image.html">Image Search</a> &emsp;
+        <a href="advanced.html">Advanced Search</a>
+    </div>
+
     </body>
 </html>
